metadata-classic/objects/TackSupport__c.object
<CustomObject>
    <description>Custom object to store data records pertaining to support content change requests (e.g., requests to change or create email templates, knowledge articles, macros, or quick text).</description>
    <fields>
        <fullName>ArticleNumber__c</fullName>
        <description>The article number of the knowledge article that this content support request is regarding.</description>
        <label>Article Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompletedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Admin who worked on the issue</description>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TackSupport</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedByFirstName__c</fullName>
        <description>The first name of the person who created the Content Support Request. Used as a merge field in Email Templates.</description>
        <formula>CreatedBy.FirstName</formula>
        <label>Created By First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <description>Date to indicate when the content should be published and available for agent use.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmailNotificationText__c</fullName>
        <description>Open text area used as a merge field in automated email template alerts.</description>
        <label>Email Notification Text</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IfUrgentPleaseExplainWhy__c</fullName>
        <description>Open text area used for explanation.</description>
        <inlineHelpText>Explain why this is an urgent request.</inlineHelpText>
        <label>If urgent, please explain why:</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsThisUrgent__c</fullName>
        <description>Picklist that describes the urgency of the request.</description>
        <inlineHelpText>Urgent requests should only be sent by managers, SMEs, or TLs.</inlineHelpText>
        <label>Is this urgent?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KnowledgeURL__c</fullName>
        <description>Best Practice or Knowledge Base article link.</description>
        <inlineHelpText>Knowledge Base article link</inlineHelpText>
        <label>Knowledge URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LoggedInUserIsCreator__c</fullName>
        <description>Formula field to indicate true if the logged in user is the same user as the record creator.  Used for list view creation.</description>
        <formula>CreatedBy.Id = $User.Id</formula>
        <label>Logged In User is Creator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NameOfMacroArticle__c</fullName>
        <description>Text area to allow users to enter the current titles of Email Templates, Macros, or Knowledge articles that need to be revised.</description>
        <inlineHelpText>Ex. Buying credits for the first time</inlineHelpText>
        <label>Name of macro/article</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PointOfContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to user that indicates the person to contact for clarification or additional questions.</description>
        <inlineHelpText>The person to contact for clarification or additional questions.</inlineHelpText>
        <label>Point of Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TackSupportPointOfContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PublishDate__c</fullName>
        <description>The date the macro, article, or alert message is published.</description>
        <label>Publish Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReasonForRequest__c</fullName>
        <description>Text area that allows users to describe why the new content is needed or why the existing content needs to be revised.</description>
        <inlineHelpText>Help us understand why this is needed. Ex: The process has changed slightly. Step three should say, “X” instead of “Y.”</inlineHelpText>
        <label>Reason for Request</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <description>Resolution of the Tack issue by admin</description>
        <inlineHelpText>Resolution of the Tack issue by admin</inlineHelpText>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RoughDraftOfContent__c</fullName>
        <description>Text area to allow users to enter in instructions, wording, information, or talking points for the requested support content.</description>
        <inlineHelpText>How you would write or update the macro/article. Not sure what to include? See example to the right.</inlineHelpText>
        <label>Rough draft of content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Field to show the current working status of Tack help request.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Need More Info</fullName>
                </value>
                <value>
                    <fullName>Added to Trello</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TypeOfRequest__c</fullName>
        <description>Picklist of values to describe the type of request the record is.</description>
        <inlineHelpText>Select an option from the drop-down menu.</inlineHelpText>
        <label>Type of Content Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New macro</fullName>
                </value>
                <value>
                    <fullName>New knowledge article</fullName>
                </value>
                <value>
                    <fullName>Update or edit to existing content</fullName>
                </value>
                <value>
                    <fullName>Alert message in Help Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnpublishDate__c</fullName>
        <description>The date the macro, article, or alert message is unpublished.</description>
        <label>Unpublish Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UpdateType__c</fullName>
        <description>Picklist whose value describe the type of content update needed.</description>
        <label>Update Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quick fix</fullName>
                </value>
                <value>
                    <fullName>Extensive update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Content Support</label>
    <listViews>
        <fullName>ContentRequestHCAlertMessages</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>IsThisUrgent__c</columns>
        <columns>IfUrgentPleaseExplainWhy__c</columns>
        <columns>Status__c</columns>
        <columns>PublishDate__c</columns>
        <columns>UnpublishDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TackSupport__c.ContentRequest</value>
        </filters>
        <filters>
            <field>TypeOfRequest__c</field>
            <operation>equals</operation>
            <value>Alert message in Help Center</value>
        </filters>
        <label>6. Content Request - HC Alert Messages</label>
        <sharedTo>
            <group>ContentUser</group>
            <role>SharedServicesUserTSL</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ContentRequestMyCompleted</fullName>
        <columns>NAME</columns>
        <columns>TypeOfRequest__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>IsThisUrgent__c</columns>
        <columns>IfUrgentPleaseExplainWhy__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TackSupport__c.ContentRequest</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed,Canceled,Completed</value>
        </filters>
        <label>5. Content Request - My Completed</label>
        <sharedTo>
            <group>ContentUser</group>
            <role>SharedServicesUserTSL</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ContentRequestMyOpen</fullName>
        <columns>NAME</columns>
        <columns>TypeOfRequest__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>IsThisUrgent__c</columns>
        <columns>IfUrgentPleaseExplainWhy__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TackSupport__c.ContentRequest</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Canceled,Completed</value>
        </filters>
        <label>4. Content Request - My Open</label>
        <sharedTo>
            <group>ContentUser</group>
            <role>SharedServicesUserTSL</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ContentRequestsAssigned</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>TypeOfRequest__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TackSupport__c.ContentRequest</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Canceled,Completed</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>notEqual</operation>
            <value>Support Content</value>
        </filters>
        <label>2. Content Request - Assigned</label>
        <sharedTo>
            <group>ContentUser</group>
            <role>SharedServicesUserTSL</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ContentRequestsCompleted</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>TypeOfRequest__c</columns>
        <columns>UpdateType__c</columns>
        <columns>DueDate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TackSupport__c.ContentRequest</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed,Canceled,Completed</value>
        </filters>
        <label>3. Content Request - Completed</label>
        <sharedTo>
            <group>ContentUser</group>
            <role>SharedServicesUserTSL</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ContentRequestsNew</fullName>
        <columns>NAME</columns>
        <columns>TypeOfRequest__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>IsThisUrgent__c</columns>
        <columns>IfUrgentPleaseExplainWhy__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TackSupport__c.ContentRequest</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Canceled</value>
        </filters>
        <label>1. Content Request - New</label>
        <queue>SupportContent</queue>
        <sharedTo>
            <group>ContentUser</group>
            <role>SharedServicesUserTSL</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyClosedRequests</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>CompletedBy__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>LoggedInUserIsCreator__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Closed Requests</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CustomerSuccessOrganization</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpenRequests</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Completed,Canceled</value>
        </filters>
        <filters>
            <field>LoggedInUserIsCreator__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Open Requests</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CustomerSuccessOrganization</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Support</pluralLabel>
    <recordTypes>
        <fullName>ContentRequest</fullName>
        <active>true</active>
        <description>Record type used to submit a request for Support Content (e.g., email template, macro, Knowledge article)</description>
        <label>Content Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>TackSupport</fullName>
        <active>false</active>
        <description>Record type used to submit a live-ops bug log or tack support help request.</description>
        <label>Tack Support</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>EmailNotificationTextRequired</fullName>
        <active>true</active>
        <description>The email notification text field is required when the status is need more info or canceled.</description>
        <errorConditionFormula>AND( 
RecordTypeId = &apos;01Ii000000258Ya&apos;,
ISBLANK( EmailNotificationText__c ), 
OR( 
ISPICKVAL(Status__c, &quot;Need More Info&quot;), 
ISPICKVAL(Status__c, &quot;Canceled&quot;) 
) 
)</errorConditionFormula>
        <errorDisplayField>EmailNotificationText__c</errorDisplayField>
        <errorMessage>By setting the status to &quot;Need More Info&quot; or &quot;Canceled&quot; an automatic email will be sent to the creator. Be sure to enter your message before selecting these statuses.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NameOfContentRequiredOnUpdateType</fullName>
        <active>true</active>
        <description>You must enter the name of the macro or article when selecting the update or edit to existing content request type.</description>
        <errorConditionFormula>RecordTypeId = &apos;01Ii000000258Ya&apos; &amp;&amp;
ISPICKVAL(TypeOfRequest__c, &quot;Update or edit to existing content&quot;) &amp;&amp;
ISBLANK( NameOfMacroArticle__c )</errorConditionFormula>
        <errorDisplayField>NameOfMacroArticle__c</errorDisplayField>
        <errorMessage>You must enter the name of the macro or article when selecting the update or edit to existing content request type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UrgentExplanationRequired</fullName>
        <active>true</active>
        <description>Requires an explanation if marked as urgent.</description>
        <errorConditionFormula>RecordTypeId = &apos;01Ii000000258Ya&apos; &amp;&amp;
ISPICKVAL(IsThisUrgent__c, &quot;Yes&quot;) &amp;&amp;
ISBLANK(IfUrgentPleaseExplainWhy__c)</errorConditionFormula>
        <errorDisplayField>IfUrgentPleaseExplainWhy__c</errorDisplayField>
        <errorMessage>Please enter your explanation for urgency.</errorMessage>
    </validationRules>
</CustomObject>